--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <title>Fotogram</title>
     <link rel="icon" href="./assets/favicon.svg" sizes="any" type="image/svg+xml">
     <link rel="stylesheet" type="text/css" href="./style.css">
-    <script src="./script.js"></script>
+
 
 </head>
 
@@ -34,17 +34,16 @@
     </header>
 
     <div class="aot">
-            <main class="contentWidth">
-                <section>
-                    <div class="headline">
-                        <h1>Meine Fotos aus Bregenz 2025</h1>
-                    </div>
-                </section>
-                <section>
-                    <div id="pictureField" class="pictureplace">fgdg
-                    </div>
-                </section>
-            </main>
+        <main class="contentWidth">
+            <section>
+                <div class="headline">
+                    <h1>Meine Fotos aus Bregenz 2025</h1>
+                </div>
+            </section>
+            <section>
+                <div id="pictureField" class="pictureplace"></div>
+            </section>
+        </main>
     </div>
 
     <footer>
@@ -52,7 +51,7 @@
             <h1>footer</h1>
         </div>
     </footer>
-
+    <script src="./script.js"></script>
 </body>
 
 </html>
