modified first step js

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 </head>
 
-<body>
+<body onload="render()">
 
     <header>
         <div class="contentWidth">
@@ -48,7 +48,9 @@
 
     <footer>
         <div class="contentWidth">
-            <h1>footer</h1>
+            <div class="footerRemark">
+                <h2>© 2025, Alexander Kiefer</h2>
+            </div>
         </div>
     </footer>
     <script src="./script.js"></script>
