--- a/impressum.html
+++ b/impressum.html
@@ -544,7 +544,11 @@
         </p>
 
     </div>
-
+  <footer>
+        <div class="contentWidth">
+            <a href="./index.html"><img src="./assets/Fotogram_Logo.svg" alt="Fotogram with Logo"></a>
+        </div>
+  </footer>
 
 </body>
 
