--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Fotogram</title>
     <link rel="icon" href="./assets/favicon.svg" sizes="any" type="image/svg+xml">
     <link rel="stylesheet" type="text/css" href="./style.css">
+    <script src="./script.js" defer></script>
 </head>
 
 <body onload="render()">
@@ -37,7 +38,8 @@
             </div>
         </div>
     </footer>
-    <script src="./script.js"></script>
+
+    
 </body>
 
 </html>
