--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <title>Fotogram</title>
     <link rel="icon" href="./assets/favicon.svg" sizes="any" type="image/svg+xml">
     <link rel="stylesheet" type="text/css" href="./style.css">
-    
 </head>
 
-<body onload="render()">
+<body onload="render(), toggleOverlay()">
 
     <header class="header">
         <div class="contentWidth">
@@ -19,19 +18,22 @@
     </header>
 
     <div class="aot">
-        <main class="contentWidth">
-            <div onclick="toggleOverlay()" id="overlay" class="overlayClass">
-                                
-            </div>
 
+        <main class="contentWidth">
+
+            <div onclick="toggleOverlay()" id="overlay" class="overlayClass"></div>
             <section>
                 <div class="headline">
                     <h1>Meine Fotos aus Bregenz 2025</h1>
                 </div>
             </section>
             <section>
-                <div id="pictureField" class="pictureplace"></div>
-            </section>            
+
+                <div id="pictureField" class="pictureplace">
+
+                </div>
+            </section>
+
         </main>
     </div>
 
@@ -44,7 +46,7 @@
         </div>
     </footer>
 
-<script src="./script.js" defer></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
