stand for modified html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 
-<body onload="render(), toggleOverlay()">
+<body onload="render()"> <!--toggleOverlay(), -->
 
     <header class="header">
         <div class="contentWidth">
@@ -20,8 +20,8 @@
     <div class="aot">
 
         <main class="contentWidth">
-
-            <div onclick="toggleOverlay()" id="overlay" class="overlayClass"></div>
+            <div id="overlay">
+            <!--<div onclick="toggleOverlay()" id="overlay" class="overlayClass"></div> -->
             <section>
                 <div class="headline">
                     <h1>Meine Fotos aus Bregenz 2025</h1>
@@ -33,7 +33,7 @@
 
                 </div>
             </section>
-
+</div>
         </main>
     </div>
 
