--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
     <footer>
         <div class="contentWidth">
             <div class="footerRemark">
-                <h2>© 2025, Alexander Kiefer</h2>
+                <b>Foto´s  © 2025, Alexander Kiefer</b>
                 <a href="./impressum.html">Impressum</a>
             </div>
         </div>
     </footer>
 
-    <script src="./script.js"></script>
+    <script src="./script.js" async></script>
 </body>
 
 </html>
