change img postiton

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <footer>
         <div class="contentWidth">
             <div class="footerRemark">
-                <b>Foto´s  © 2025, Alexander Kiefer</b>
+                <b>Fotos  © 2025, Alexander Kiefer</b>
                 <a href="./impressum.html">Impressum</a>
             </div>
         </div>
