modified header and footer always visible

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
         </div>
     </header>
 
- <div id="overlay"></div>
-    <main id="aot" class="aot">
+  <div id="overlay"></div>
+    <main id="aot" class="aot">       
         <div class="contentWidth"> <!-- nur für content breite -->
             <div id="pictureField" class="pictureplace"></div>            
-        </div>
+        </div>       
     </main>
 
-    <footer>
+    <footer id="footer" class="footer">
         <div class="contentWidth">
             <div class="footerRemark">
-                <b>Foto´s  © 2025, Alexander Kiefer</b>
+                <b>Fotos  © 2025, Alexander Kiefer</b>
                 <a href="./impressum.html">Impressum</a>
             </div>
         </div>
